syntax = "proto3";

option go_package = "github.com/NethermindEth/juno/internal/sync";

message StateUpdate {
    bytes blockHash = 1;
    bytes newRoot = 2;
    bytes oldRoot = 3;
    // NOTE: map <contractAddressHex, diffs> 
    map<string, StorageDiffs> storageDiffs = 4;
    repeated bytes declaredContracts = 5;
    repeated DeployedContract deployedContracts = 6;
    repeated Nonce nonces = 7;
}

message StorageDiffs {
    repeated StorageDiff diffs = 1;
}

message StorageDiff {
    bytes key = 1;
    bytes value = 2;
}

message DeployedContract {
    bytes address = 1;
    bytes classHash = 2;
}

message Nonce {
    bytes contractAddress = 1;
    bytes nonce = 2;
}

